# rust-native

./: .gitignore  Cargo.toml  README.md
example-android/: .project  AndroidManifest.xml  Cargo.toml  apk.toml  build.gradle  build.rs  settings.gradle
example-android/.cargo/: config.toml
example-android/android/: .project
example-android/android/app/: .project
example-android/android/app/src/main/: AndroidManifest.xml
example-android/android/app/src/main/java/com/rustnative/: MainActivity.java
example-android/android/src/main/java/com/rustnative/: UiHelper.java
example-android/app/: build.gradle  proguard-rules.pro
example-android/app/src/main/: AndroidManifest.xml
example-android/app/src/main/java/com/rustnative/: MainActivity.java  UiHelper.java
example-android/src/: lib.rs  main.rs
rust-native-core/: Cargo.toml
rust-native-core-android/: Cargo.toml
rust-native-core-android/src/: lib.rs  utils.rs
rust-native-core-ios/: Cargo.toml
rust-native-core-ios/src/: lib.rs
rust-native-core/src/: lib.rs
rust-native-macro/: Cargo.toml
rust-native-runtime/: Cargo.toml
rust-native-ui/: Cargo.toml
rust-native-ui/src/: text.rs
