[package]
name = "example-android"
version = "0.1.0"
edition = "2024"

[dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.15.0"
ndk = "0.9.0"

ahash = { workspace = true }
jni = { workspace = true }
log = { workspace = true }

rust-native-core = { path = "../rust-native-core" }
rust-native-core-android = { path = "../rust-native-core-android" }
rust-native-ui = { path = "../rust-native-ui" }

[lib]
crate-type = ["cdylib"]
